--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,27 @@
-# MongoDB Atlas
-# change uniquement ces 3 champs 
-# cluster => connect => drivers => python version 3.11 => copie colle l'url ici 
-# remplace user et password par les mdp que je vais t'envoyer et ajoute à la fin &authSource=admin
+# URI de connexion MongoDB Atlas
+# cluster => connect => drivers => python => copie colle l'URI ici 
+# Remplace <user> et <password> par tes identifiants
+# Ajoute à la fin : &authSource=admin
 MONGO_URI=mongodb+srv://user:password@cluster.mongodb.net/?retryWrites=true&w=majority
-# ici nom de la db
+# Nom de la base MongoDB à migrer
 MONGO_DB=ma_base
-# ici nom de la collection
+# Nom de la collection
 MONGO_COLLECTION=clients
 
 # PostgreSQL (via Docker)
+
+# Adresse de la base PostgreSQL (si Docker : localhost)
 PG_HOST=localhost
+
+# Port par défaut
 PG_PORT=5432
+
+# IDs de connexion PostgreSQL
 PG_USER=pguser
 PG_PASSWORD=pgpass
+
+# Nom de la base PostGreSQL
 PG_DB=mongodata
-PG_TABLE=homepedia
+
+# Nom de la table dans laquelle les données seront insérées
+PG_TABLE=ma_table
